# Flask-jobscrapper

./: .flake8  README.md  makefile  pyproject.toml  run-dev.sh
app/: app.py  exporter.py  scrapper.py  web3.py  wework.py
app/templates/: index.html  search.html
