[tool.poetry]
name = "flask-scrapper"
version = "0.1.0"
description = "jobscrapper with Flask, python"
authors = ["Luceta <57941164+Luceta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_scrapper"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
